# internal/handlers/api_handlers.go
@@ -3,23 +3,80 @@ package handlers
 import (
 	//"fmt"
 	"context"
-	"fmt"
-	"io"
-	"net/http"
+	//"fmt"
+	///"io"
+	//"net/http"
 
 	data "first/internal/database"
 	"first/internal/web/messages"
 
 	ms "first/internal/messagesService"
 	//"log"
-
-	"encoding/json"
+	//"encoding/json"
 	//"strings"
 	//"github.com/gorilla/mux"
 )
 
 type Handler struct {
 	Service *ms.MessageService
+}
+
+// DeleteMessages implements messages.StrictServerInterface.
+func (h *Handler) DeleteMessages(ctx context.Context, request messages.DeleteMessagesRequestObject) (messages.DeleteMessagesResponseObject, error) {
+	messageRequest := request.Body
+
+	err := h.Service.DeleteMessage(*messageRequest.Id)
+	if err != nil {
+		return nil, err
+	}
+
+	response := messages.DeleteMessages204JSONResponse{
+		Id:      messageRequest.Id,
+		Message: messageRequest.Message,
+	}
+	return response, nil
+
+}
+
+// PatchMessages implements messages.StrictServerInterface.
+func (h *Handler) PatchMessages(ctx context.Context, request messages.PatchMessagesRequestObject) (messages.PatchMessagesResponseObject, error) {
+	messageRequest := request.Body
+
+	messageToPatch := messages.Message{
+		Id:      messageRequest.Id,
+		Message: messageRequest.Message,
+	}
+	_, err := h.Service.PatchMessage(*messageRequest.Id, messageToPatch)
+	if err != nil {
+		return nil, err
+	}
+
+	response := messages.PatchMessages200JSONResponse{
+		Id:      messageToPatch.Id,
+		Message: messageToPatch.Message,
+	}
+	return response, nil
+}
+
+// PostMessages implements messages.StrictServerInterface.
+func (h *Handler) PostMessages(ctx context.Context, request messages.PostMessagesRequestObject) (messages.PostMessagesResponseObject, error) {
+	// Распаковываем тело запроса напрямую, без декодера!
+	messageRequest := request.Body
+	// Обращаемся к сервису и создаем сообщение
+	messageToCreate := ms.Message{Text: *messageRequest.Message}
+	createdMessage, err := h.Service.CreateMessage(messageToCreate)
+	if err != nil {
+		return nil, err
+	}
+
+	// создаем структуру респонс
+	response := messages.PostMessages201JSONResponse{
+		Id:      &createdMessage.ID,
+		Message: &createdMessage.Text,
+	}
+
+	// Просто возвращаем респонс!
+	return response, nil
 }
 
 // GetMessages implements messages.StrictServerInterface.
@@ -41,26 +98,6 @@ func (h *Handler) GetMessages(ctx context.Context, request messages.GetMessagesR
 	return response, nil
 }
 
-// PostMessages implements messages.StrictServerInterface.
-func (h *Handler) PostMessages(ctx context.Context, request messages.PostMessagesRequestObject) (messages.PostMessagesResponseObject, error) {
-	// Распаковываем тело запроса напрямую, без декодера!
-	messageRequest := request.Body
-	// Обращаемся к сервису и создаем сообщение
-	messageToCreate := ms.Message{Text: *messageRequest.Message}
-	createdMessage, err := h.Service.CreateMessage(messageToCreate)
-
-	if err != nil {
-		return nil, err
-	}
-	// создаем структуру респонс
-	response := messages.PostMessages201JSONResponse{
-		Id:      &createdMessage.ID,
-		Message: &createdMessage.Text,
-	}
-	// Просто возвращаем респонс!
-	return response, nil
-}
-
 func NewHandler(service *ms.MessageService) *Handler {
 	return &Handler{
 		Service: service,
@@ -69,40 +106,4 @@ func NewHandler(service *ms.MessageService) *Handler {
 
 var DB = data.DB
 
-var msg ms.Message
-
-func (h *Handler) DeleteMessageByIDHandler(w http.ResponseWriter, r *http.Request) {
-	JsonFromRtoMSG(w, r)
-	err := h.Service.DeleteMessage(msg.ID)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError) ////////////////////////////////////////////////////////////////////// Не понимаю как писать обработку ошибок
-		return
-	}
-	ans := fmt.Sprintf("строка с id: %v удалена", msg.ID)
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(ans)
-}
-
-func (h *Handler) UpdateMessageByID(w http.ResponseWriter, r *http.Request) {
-	JsonFromRtoMSG(w, r)
-	Message, err := h.Service.PatchMessage(msg.ID, msg)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError) ////////////////////////////////////////////////////////////////////// Не понимаю как писать обработку ошибок
-		return
-	}
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(Message)
-}
-
-// Распаршивает json из запроса в msg
-func JsonFromRtoMSG(w http.ResponseWriter, r *http.Request) {
-	bodyBytes, _ := io.ReadAll(r.Body)
-	defer r.Body.Close()
-	err := json.Unmarshal(bodyBytes, &msg)
-	if err != nil {
-		http.Error(w, "Ошибка парсинга JSON", http.StatusBadRequest)
-
-		return
-	}
-
-}
+//var msg ms.Message
