# internal/web/messages/api.gen.go
@@ -19,14 +19,26 @@ type Message struct {
 	Message *string `json:"message,omitempty"`
 }
 
+// DeleteMessagesJSONRequestBody defines body for DeleteMessages for application/json ContentType.
+type DeleteMessagesJSONRequestBody = Message
+
+// PatchMessagesJSONRequestBody defines body for PatchMessages for application/json ContentType.
+type PatchMessagesJSONRequestBody = Message
+
 // PostMessagesJSONRequestBody defines body for PostMessages for application/json ContentType.
 type PostMessagesJSONRequestBody = Message
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// delete message by id
+	// (DELETE /messages)
+	DeleteMessages(ctx echo.Context) error
 	// Get all messages
 	// (GET /messages)
 	GetMessages(ctx echo.Context) error
+	// Patch message by id
+	// (PATCH /messages)
+	PatchMessages(ctx echo.Context) error
 	// Create a new message
 	// (POST /messages)
 	PostMessages(ctx echo.Context) error
@@ -37,12 +49,30 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
+// DeleteMessages converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteMessages(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.DeleteMessages(ctx)
+	return err
+}
+
 // GetMessages converts echo context to params.
 func (w *ServerInterfaceWrapper) GetMessages(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.GetMessages(ctx)
+	return err
+}
+
+// PatchMessages converts echo context to params.
+func (w *ServerInterfaceWrapper) PatchMessages(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.PatchMessages(ctx)
 	return err
 }
 
@@ -83,9 +113,41 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
+	router.DELETE(baseURL+"/messages", wrapper.DeleteMessages)
 	router.GET(baseURL+"/messages", wrapper.GetMessages)
+	router.PATCH(baseURL+"/messages", wrapper.PatchMessages)
 	router.POST(baseURL+"/messages", wrapper.PostMessages)
 
+}
+
+type DeleteMessagesRequestObject struct {
+	Body *DeleteMessagesJSONRequestBody
+}
+
+type DeleteMessagesResponseObject interface {
+	VisitDeleteMessagesResponse(w http.ResponseWriter) error
+}
+
+type DeleteMessages204JSONResponse Message
+
+func (response DeleteMessages204JSONResponse) VisitDeleteMessagesResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(204)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type PatchMessagesResponseObject interface {
+	VisitPatchMessagesResponse(w http.ResponseWriter) error
+}
+
+type PatchMessages200JSONResponse Message
+
+func (response PatchMessages200JSONResponse) VisitPatchMessagesResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
 }
 
 type GetMessagesRequestObject struct {
@@ -104,6 +166,13 @@ func (response GetMessages200JSONResponse) VisitGetMessagesResponse(w http.Respo
 	return json.NewEncoder(w).Encode(response)
 }
 
+type PatchMessagesRequestObject struct {
+	
+	Body *PatchMessagesJSONRequestBody
+}
+
+
+
 type PostMessagesRequestObject struct {
 	Body *PostMessagesJSONRequestBody
 }
@@ -112,11 +181,26 @@ type PostMessagesResponseObject interface {
 	VisitPostMessagesResponse(w http.ResponseWriter) error
 }
 
+type PostMessages201JSONResponse Message
+
+func (response PostMessages201JSONResponse) VisitPostMessagesResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(201)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
+	// delete message by id
+	// (DELETE /messages)
+	DeleteMessages(ctx context.Context, request DeleteMessagesRequestObject) (DeleteMessagesResponseObject, error)
 	// Get all messages
 	// (GET /messages)
 	GetMessages(ctx context.Context, request GetMessagesRequestObject) (GetMessagesResponseObject, error)
+	// Patch message by id
+	// (PATCH /messages)
+	PatchMessages(ctx context.Context, request PatchMessagesRequestObject) (PatchMessagesResponseObject, error)
 	// Create a new message
 	// (POST /messages)
 	PostMessages(ctx context.Context, request PostMessagesRequestObject) (PostMessagesResponseObject, error)
@@ -132,6 +216,35 @@ func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareF
 type strictHandler struct {
 	ssi         StrictServerInterface
 	middlewares []StrictMiddlewareFunc
+}
+
+// DeleteMessages operation middleware
+func (sh *strictHandler) DeleteMessages(ctx echo.Context) error {
+	var request DeleteMessagesRequestObject
+
+	var body DeleteMessagesJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return err
+	}
+	request.Body = &body
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.DeleteMessages(ctx.Request().Context(), request.(DeleteMessagesRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "DeleteMessages")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(DeleteMessagesResponseObject); ok {
+		return validResponse.VisitDeleteMessagesResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
 }
 
 // GetMessages operation middleware
@@ -151,6 +264,35 @@ func (sh *strictHandler) GetMessages(ctx echo.Context) error {
 		return err
 	} else if validResponse, ok := response.(GetMessagesResponseObject); ok {
 		return validResponse.VisitGetMessagesResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// PatchMessages operation middleware
+func (sh *strictHandler) PatchMessages(ctx echo.Context) error {
+	var request PatchMessagesRequestObject
+
+	var body PatchMessagesJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return err
+	}
+	request.Body = &body
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.PatchMessages(ctx.Request().Context(), request.(PatchMessagesRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "PatchMessages")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(PatchMessagesResponseObject); ok {
+		return validResponse.VisitPatchMessagesResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
