# openapi/openapi.yaml
@@ -21,15 +21,6 @@ paths:
       summary: Create a new message
       tags:
         - messages
-      responses:
-        '201':
-          description: A list of messages
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Message'
       requestBody:
         description: The message to create
         required: true
@@ -37,6 +28,52 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Message'
+      responses:
+        '201':
+          description: status code
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/Message'
+    patch:
+      summary: Patch message by id
+      tags:
+        - messages
+      requestBody:
+        description: id and patch 
+        reqired: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Message'
+      responses:
+        '200':
+          description: status code
+          content:
+            application/json:
+             schema:
+               $ref: '#/components/schemas/Message'
+    delete:
+      summary: delete message by id
+      tags:
+        - messages
+      requestBody:
+        description: id to del
+        reqired: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Message'
+      responses:
+        '204':
+          description: status code
+          content:
+            application/json:
+             schema:
+               $ref: '#/components/schemas/Message'
+              
+
+      
               
 components:
   schemas:
